--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,18 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/asd.png
+    - assets/images/home.png
+    - assets/images/questions.png
+    - assets/images/summary.png
+    - assets/images/setting.png
+    - assets/images/up.png
+    - assets/images/down.png
+    - assets/images/homeafterclick.png
+    - assets/images/questionsafterclick.png
+    - assets/images/summaryafterclick.png
+    - assets/images/settingafterclick.png
+
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
